update output format

--- a/templates/service.template.hbs
+++ b/templates/service.template.hbs
@@ -3,7 +3,7 @@
  * Do not edit.
  */
 import { Request, RequestParams } from '@gopowerteam/http-request'
-import { Observable } from 'rxjs'
+import type { Observable } from 'rxjs'
 import { {{controllerClass}} } from '{{controllerDir}}/{{controller}}.controller'
 
 export class {{serviceClass}} {
