--- a/templates/service.template.hbs
+++ b/templates/service.template.hbs
@@ -9,7 +9,7 @@ import { {{controllerClass}} } from '{{controllerDir}}/{{controller}}.controller
 export class {{serviceClass}} {
 {{#each actions}}
     /**
-     * {{summary}}
+     * {{comment}}
      */
     @Request({
         server: {{../controllerClass}}.{{action}}
