--- a/templates/service.template.hbs
+++ b/templates/service.template.hbs
@@ -8,14 +8,16 @@ import { {{controllerClass}} } from '{{controllerDir}}/{{controller}}.controller
 
 export class {{serviceClass}} {
 {{#each actions}}
-    /**
-     * {{comment}}
-     */
-    @Request({
-        server: {{../controllerClass}}.{{action}}
-    })
-    public {{action}}(requestParams: RequestParams): Observable<any> {
-        return requestParams.request()
-    }
-    {{/each}}
+  /**
+   * {{comment}}
+   */
+  @Request({
+    server: {{../controllerClass}}.{{action}}
+  })
+  public {{action}}(
+    params?: RequestParams | { [key: string]: any }
+  ): Observable<any> {
+    return RequestParams.create(params).request();
+  }
+  {{/each}}
 }
