--- a/templates/model.template.hbs
+++ b/templates/model.template.hbs
@@ -1,5 +1,10 @@
 export class {{className}} extends Model {
 {{#each properties}}
+  {{#if description}}
+  /**
+   * {{description}}
+   */
+  {{/if}}
   {{#if originalRef}}
   @Type(() => {{originalRef}})
   {{/if}}
